--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="weather">
+      <h2>El temps actual es:</h2>
+      <p id="CurrentWeather"></p>
+    </div>
     <div class="card">
       <h1>Preparat per riure? 🤣</h1>
       <p>Fes clic al botó per veure un acudit</p>
