--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="card">
       <h1>Preparat per riure? 🤣</h1>
-      <p>Fes clic al botó per veure un acudit</p>
+      <p id="Joke">Fes clic al botó per veure un acudit</p>
       <div class="votacion">
         <p id="errorVotacion">Sisplau vota l'acudit</p>
         <img src="/Images/3.png" onclick="votar(3)" />
